# SyllableReader

./: CMakeLists.txt  file.txt  main.cpp  reader.cpp  reader.h
